# AgriSim

./: README.md
backend/: .gitignore
backend/api/: Cargo.toml  Rocket.toml
backend/api/src/: main.rs
backend/api/src/app/: mod.rs  sensor.rs
backend/api/src/database/: base_client.rs
backend/api/src/models/: mod.rs  sensor.rs  user.rs
backend/api/src/utility/: sensor.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/login/: layout.js  page.js
frontend/src/app/newFarm/connect/: page.js
frontend/src/app/newFarm/details/: layout.js  page.js
frontend/src/app/signup/: page.js
frontend/src/components/: Navbar.jsx
frontend/src/components/landing/: FarmButton.jsx  FarmsList.jsx
