[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.32"
mongodb = "2.8.0"
rocket = "0.5.0"
ws = { package = "rocket_ws", version = "0.1.0" }
serde = "1.0.195"
rand = "0.8.5"
